WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member the fuel data belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Truckers Fuel</relationshipLabel>
    <relationshipName>Truckers_Fuel</relationshipName>
    <type>Lookup</type>
</CustomField>