WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/Fuel_Month__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>