WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/Loves_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Loves_Gallons__c</fullName>
    <label>Loves Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>