WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/Pilot_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Percentage__c</fullName>
    <formula>Pilot_Gallons__c / Total_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pilot Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>