WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/TA_Gallons__c.field-meta.xml
<CustomField>
    <fullName>TA_Gallons__c</fullName>
    <label>TA Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>