WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/TA_Percentage__c.field-meta.xml
<CustomField>
    <fullName>TA_Percentage__c</fullName>
    <formula>TA_Gallons__c / Total_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TA Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>