WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/TA_Savings__c.field-meta.xml
<CustomField>
    <fullName>TA_Savings__c</fullName>
    <label>TA Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>