WexGit/Wex_DX/force-app/main/default/objects/Truckers_Fuel__c/fields/Total_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Total_Gallons__c</fullName>
    <label>Total Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>